[package]
name = "Mori"
version = "0.1.0"
edition = "2024"
authors = ["Cendy"]

[dependencies]
bevy = "0.16.1"
bevy_egui = "0.36.0"
chromiumoxide = "0.7.0"
egui_flex = "0.4.0"
egui_material_icons = "0.4.0"
egui_virtual_list = "0.8.0"
features = "0.10.0"
gt-core = { path = "./core" }
rand = "0.9.2"
regex = "1.11.2"
reqwest = "0.12.23"
time = "0.3.43"
tokio = "1.47.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
